--- a/app/src/main/res/layout/fragment_finish_order.xml
+++ b/app/src/main/res/layout/fragment_finish_order.xml
@@ -38,26 +38,13 @@
 
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="14dp"
-        android:fontFamily="@font/poppins_bold"
-        android:gravity="center"
-        android:text="Thank You!\nOrder Completed"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
-        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
-        app:layout_constraintTop_toBottomOf="@+id/ivDots" />
-
-    <TextView
         android:id="@+id/tvThanks"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/poppins_bold"
         android:gravity="center"
-        android:text="Thank You!\nOrder Completed"
+        android:text="@string/thank_you_norder_completed"
         android:textColor="@color/black"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="@id/guidelineRight"
@@ -71,7 +58,7 @@
         android:layout_marginTop="14dp"
         android:fontFamily="@font/poppins_medium"
         android:gravity="center"
-        android:text="Please rate your last Driver"
+        android:text="@string/please_rate_your_last_driver"
         android:textColor="#C3C3C4"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/guidelineRight"
@@ -129,7 +116,7 @@
                 android:background="#00000000"
                 android:fontFamily="@font/poppins_medium"
                 android:gravity="center_vertical"
-                android:hint="Leave Feedback"
+                android:hint="@string/leave_feedback"
                 android:inputType="text"
                 android:textColor="@color/black"
                 android:textColorHint="#C3C3C4"
@@ -162,7 +149,7 @@
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppins_medium"
-            android:text="Submit"
+            android:text="@string/submit"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +165,7 @@
             android:layout_marginBottom="10dp"
             android:layout_weight="2.8"
             android:fontFamily="@font/poppins_bold"
-            android:text="Skip"
+            android:text="@string/skip"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
